// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Text Input example 1`] = `
.emotion-34 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-33 {
  padding: 10px;
}

.emotion-15 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  font-size: 0.875rem;
  font-weight: normal;
  line-height: 1.29;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #65717b;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f6f6f6;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-12 {
  color: #000000;
  overflow: hidden;
  padding: 0rem 1.5rem;
  text-overflow: ellipsis;
  width: calc(100% - 4.3125rem);
}

.emotion-14 {
  background: none;
  border: none;
  border-left: 1px solid #59646d;
  cursor: pointer;
  height: 1.75rem;
  padding: 0rem 1.5rem;
  width: 4.3125rem;
}

.emotion-14:focus {
  outline: 2px solid #008fe9;
}

.emotion-14::-moz-focus-inner {
  border: 0;
}

.emotion-13 {
  display: block;
  fill: #008fe9;
  stroke: #008fe9;
  stroke-width: 0.1;
}

.emotion-18 {
  display: none;
}

.emotion-1 {
  box-shadow: inset 0 2px 5px 0 rgba(0,0,0,0.1);
  background-color: #ffffff;
  border: solid 1px #b0b8bf;
  border-radius: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.33;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #000000;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: none;
  border-radius: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 3.33rem;
  padding: 1rem;
  position: relative;
  vertical-align: middle;
  width: 100%;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:disabled {
  outline: none;
  border: none;
  color: #65717b;
  background: #e9ebed;
}

.emotion-2 {
  min-height: 10px;
}

.emotion-7 {
  box-shadow: inset 0 2px 5px 0 rgba(0,0,0,0.1);
  background-color: #ffffff;
  border: solid 1px #b0b8bf;
  border-radius: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  border-color: #db1818;
  box-shadow: inset 0 0 0 1px #db1818;
  width: 100%;
}

.emotion-20 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.33;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #000000;
  margin: 0.5rem 0rem;
  padding: 0.5rem 0.75rem;
  text-align: center;
  box-sizing: border-box;
  color: #b0b8bf;
  border-right: solid 1px #d1d1d1;
}

.emotion-25 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.33;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #000000;
  margin: 0.5rem 0rem;
  padding: 0.5rem 0.75rem;
  text-align: center;
  box-sizing: border-box;
  color: #b0b8bf;
  border-left: solid 1px #d1d1d1;
}

<div
  className="emotion-34"
>
  <div
    className="emotion-33"
  >
    <div
      className="emotion-1"
    >
      <input
        className="emotion-0"
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="Cascat"
      />
    </div>
    <div
      className="emotion-2"
    />
    <div
      className="emotion-1"
    >
      <input
        className="emotion-0"
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Placeholder"
        type="text"
        value=""
      />
    </div>
    <div
      className="emotion-2"
    />
    <div
      className="emotion-7"
    >
      <input
        className="emotion-0"
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="Error!"
      />
    </div>
    <div
      className="emotion-2"
    />
    <div
      className="emotion-1"
    >
      <input
        className="emotion-0"
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onPaste={[Function]}
        placeholder="XX-XX-XX"
        type="tel"
        value=""
      />
    </div>
    <div
      className="emotion-2"
    />
    <div
      className="emotion-15"
    >
      <p
        className="emotion-12"
      >
        Prefilled
      </p>
      <button
        aria-label="Edit Value"
        className="emotion-14"
        onClick={[Function]}
      >
        <svg
          className="emotion-13"
          viewBox="0 0 21 21"
        >
          <path
            d="M7.579 10.958l-.245 2.968a.74.74 0 0 0 .245.574c.14.142.33.222.53.222h.039l2.995-.143a.708.708 0 0 0 .49-.213l8.154-8.255a.752.752 0 0 0 0-1.049l-2.775-2.8a.755.755 0 0 0-1.04 0L7.81 10.499a.74.74 0 0 0-.23.46zm1.441.396l7.453-7.513 1.73 1.746-7.418 7.508-1.897.099.132-1.84z"
          />
          <path
            d="M18.551 11.534v6.514c0 .27-.217.488-.486.488H2.945a.487.487 0 0 1-.486-.488V2.952c0-.27.217-.488.486-.488h8.557V1H2.945A1.948 1.948 0 0 0 1 2.952v15.096C1 19.126 1.87 20 2.945 20h15.11A1.948 1.948 0 0 0 20 18.048v-6.514h-1.449z"
          />
        </svg>
      </button>
    </div>
    <div
      className="emotion-18"
    >
      <div
        className="emotion-1"
      >
        <input
          className="emotion-0"
          name="example"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="text"
          value="Prefilled"
        />
      </div>
    </div>
    <div
      className="emotion-2"
    />
    <div
      className="emotion-1"
    >
      <span
        className="emotion-20"
      >
        £
      </span>
      <input
        className="emotion-0"
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="tel"
        value=""
      />
    </div>
    <div
      className="emotion-2"
    />
    <div
      className="emotion-1"
    >
      <input
        className="emotion-0"
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="tel"
        value=""
      />
      <span
        className="emotion-25"
      >
        .00
      </span>
    </div>
    <div
      className="emotion-2"
    />
    <div
      className="emotion-1"
    >
      <input
        className="emotion-0"
        name="password"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="password"
        value="swordfish"
      />
    </div>
    <div
      className="emotion-2"
    />
    <div
      className="emotion-1"
    >
      <input
        className="emotion-0"
        disabled={true}
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="Disabled"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements|Text Input postprocess 1`] = `
.emotion-7 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-1 {
  box-shadow: inset 0 2px 5px 0 rgba(0,0,0,0.1);
  background-color: #ffffff;
  border: solid 1px #b0b8bf;
  border-radius: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1.33;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #000000;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: none;
  border-radius: 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 3.33rem;
  padding: 1rem;
  position: relative;
  vertical-align: middle;
  width: 100%;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:disabled {
  outline: none;
  border: none;
  color: #65717b;
  background: #e9ebed;
}

.emotion-6 {
  padding: 10px;
}

.emotion-2 {
  background-color: papayawhip;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-6"
  >
    <label
      htmlFor="example-1"
    >
      Trim whitespace from beginning / end
    </label>
    <div
      className="emotion-1"
    >
      <input
        className="emotion-0"
        id="example-1"
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
    <pre>
      Value:
       
      <span
        className="emotion-2"
      >
        EMPTY
      </span>
    </pre>
    <label
      htmlFor="example-2"
    >
      Strip all whitespace
    </label>
    <div
      className="emotion-1"
    >
      <input
        className="emotion-0"
        id="example-2"
        name="example"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
    <pre>
      Value:
       
      <span
        className="emotion-2"
      >
        EMPTY
      </span>
    </pre>
  </div>
</div>
`;
